--- a/src/index.css
+++ b/src/index.css
@@ -82,6 +82,22 @@ h3{
 .product button{
   padding: 5px;
   width: 90px;
+  background-color: #92754f;
+  border-radius: 6px;
+  color: white;
+  border: 2px #131921 solid;
+}
+
+button:hover{
+transition: 500ms;
+background-color:#7e623f;
+cursor: pointer;
+box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+button:disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
 }
 
 .product img{
@@ -103,6 +119,16 @@ h1 img{
 header .imgContainer p{
   text-align: center;
   width: 100px;
+}
+
+header .imgContainer p a{
+  text-decoration: none;
+  color: white;
+}
+
+header .imgContainer p a:hover{
+  transition: 500ms;
+  color: #a8a3a3;
 }
 
 .imgContainer{
